Install root dependencies in GitHub Actions workflow
Add step to install root dependencies using Yarn.

--- a/.github/workflows/azure-static-web-apps-deploy.yml
+++ b/.github/workflows/azure-static-web-apps-deploy.yml
@@ -17,6 +17,9 @@ jobs:
       - name: Enable Corepack (Yarn)
         run: corepack enable
 
+      - name: Install root deps
+        run: yarn install
+
       - name: Bootstrap repo
         run: yarn bootstrap
 
