Enhance Azure deployment workflow for demo app
Updated the Azure Static Web Apps workflow to include Node setup and modified install/build steps for the demo app.

--- a/.github/workflows/azure-static-web-apps-deploy.yml
+++ b/.github/workflows/azure-static-web-apps-deploy.yml
@@ -8,20 +8,31 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env:
+      YARN_ENABLE_STRICT_PEER_DEPENDENCIES: "0"
 
     steps:
       - uses: actions/checkout@v4
         with:
           submodules: true
 
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+
       - name: Enable Corepack (Yarn)
         run: corepack enable
 
-      - name: Install & build demo-app (only)
+      - name: Install root deps
+        run: yarn install --immutable=false
+
+      - name: Bootstrap repo
+        run: yarn bootstrap
+
+      - name: Build demo-app
         working-directory: examples/demo-app
-        run: |
-          yarn install
-          yarn build
+        run: yarn build
 
       - name: Deploy to Azure Static Web Apps
         uses: Azure/static-web-apps-deploy@v1
