--- a/.github/workflows/azure-static-web-apps-deploy.yml
+++ b/.github/workflows/azure-static-web-apps-deploy.yml
@@ -25,7 +25,7 @@ jobs:
         run: corepack enable
 
       - name: Install root deps
-        run: yarn install --immutable=false
+        run: yarn install
 
       - name: Bootstrap repo
         run: yarn bootstrap
